# pytest-firestore

./: README.md  pyproject.toml  pytest-firestore.skill
.claude/skills/firestore/: SKILL.md
.claude/skills/firestore/references/: cost-management.md  data-model.md  python-api.md  testing.md
.claude/skills/gcp/: SKILL.md
.claude/skills/gcp/references/: app.md  artifacts.md  auth.md  builds.md  components.md  compute.md  config.md  container.md  dns.md  emulators.md  firestore.md  functions-and-run.md  iam.md  kms.md  logging.md  monitoring.md  projects.md  pubsub.md  secrets.md  services.md  sql.md  storage.md
.claude/skills/pytest/: SKILL.md
.claude/skills/pytest/references/: advanced-patterns.md  api-reference.md  configuration.md  fixtures-reference.md  plugin-asyncio.md  plugin-catalog.md  plugin-misc.md  plugin-mock.md  plugin-playwright.md  plugin-postgresql.md  plugin-xdist.md
.github/workflows/: publish.yml
pytest_firestore/: __init__.py  _emulator.py  plugin.py
tests/: test_emulator_unit.py  test_plugin_integration.py  test_plugin_unit.py  test_xdist_isolation.py
